terraform/module/alb/target_groups.tf
resource "aws_lb_target_group" "frontend_target_group_blue" {
  name        = local.frontend_target_group_blue_name
  vpc_id      = var.app_vpc_id
  target_type = "ip"
  port        = 80
  protocol    = "HTTP"
  health_check {
    path                = var.frontend_health_check_path
    timeout             = 10
    interval            = 60
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-399"
  }

  tags = {
    Project     = local.project_name
    Environment = local.environment
  }

}

resource "aws_lb_target_group" "frontend_target_group_green" {
  name        = local.frontend_target_group_green_name
  vpc_id      = var.app_vpc_id
  target_type = "ip"
  port        = 80
  protocol    = "HTTP"
  health_check {
    path                = var.frontend_health_check_path
    timeout             = 10
    interval            = 60
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-399"
  }

  tags = {
    Project     = local.project_name
    Environment = local.environment
  }

}


# ------------------ #

resource "aws_lb_target_group" "backend_target_group_blue" {
  name        = local.backend_target_group_blue_name
  vpc_id      = var.app_vpc_id
  target_type = "ip"
  port        = 5000
  protocol    = "HTTP"
  health_check {
    path                = var.backend_health_check_path
    timeout             = 10
    interval            = 60
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-399"
  }

  tags = {
    Project     = local.project_name
    Environment = local.environment
  }

}

resource "aws_lb_target_group" "backend_target_group_green" {
  name        = local.backend_target_group_green_name
  vpc_id      = var.app_vpc_id
  target_type = "ip"
  port        = 5000
  protocol    = "HTTP"
  health_check {
    path                = var.backend_health_check_path
    timeout             = 10
    interval            = 60
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-399"
  }

  tags = {
    Project     = local.project_name
    Environment = local.environment
  }

}
